--- a/LitChat/src/style.css
+++ b/LitChat/src/style.css
@@ -1,6 +1,7 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+@import url('https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Lora:wght@400;600&family=Open+Sans&family=Poiret+One&display=swap');
 
 :root {
     --brown: #964913;
